[package]
name = "fftr"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fastest Fourier Transform in the Rocky Mountains"
repository = "https://github.com/tylerjw/fftr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
